--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,16 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+.chakra-ui-light {
+  background: rgb(211, 243, 253);
+  width: 100%;
+  height: auto;
 }
+/* width */
+::-webkit-scrollbar { width: 10px; }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
+/* Track */
+::-webkit-scrollbar-track { box-shadow: inset 0 0 5px grey; border-radius: 10px; }
 
-* {
-  box-sizing: border-box;
-}
+/* Handle */
+::-webkit-scrollbar-thumb { background: rgb(0, 1, 2); border-radius: 10px; }
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover { background: #010608; }
